# hr-orchestrate

./: .env.example  .gitignore  .~lock.output.csv#  =1.93.0  AGENTS.md  Makefile  README workspace.md  README.md  log.txt  output.csv  pyproject.toml
challenge/current/: README.md  contract.toml
code/: .env.example  README.md  main.py  requirements.txt
code/configs/prompts/: multimodal_few_shot.md  multimodal_verify.md  solve.md  system.md
code/docs/: adaptation-guide.md  orchestrate-research.md  provider-setup.md
code/evaluation/: README.md  evaluation_report.md  experiment_loop.py  main.py  sample_predictions.csv
configs/: challenge.template.toml  multimodal_evidence_review.template.toml
configs/prompts/: multimodal_few_shot.md  multimodal_review.md  multimodal_system.md  verify.md
docs/: adaptation-guide.md  hackathon-playbook.md  interview_cheatsheet.md  judge-interview-cheatsheet.md  judge_interview_context.md  linkedin_post.md  multimodal-evidence-review-plan.md  provider-setup.md
evaluation/: README.md  evaluation_report.md
examples/demo_challenge/: contract.toml
scripts/: demo.sh  package_submission.sh
src/claim_orchestrator/: evaluation.py  image_utils.py  multimodal_helpers.py
src/hackerrank_orchestrator/: __init__.py  cli.py  corpus.py  evaluation.py  image_utils.py  llm.py  multimodal_evaluation.py  pipeline.py  prompts.py  retrieval.py  rules.py  vision_failover.py
tests/: test_demo_pipeline.py  test_image_utils.py  test_llm_provider_setup.py  test_multimodal_evaluation.py  test_multimodal_helpers.py  test_retrieval.py
(+77 files in other folders)
